--- a/index.html
+++ b/index.html
@@ -27,32 +27,34 @@
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-dark shadow fixed-top">
             <div class="container-lg">
-                <a class="navbar-brand" href="/">
+                <div class="navbar-brand d-flex">
                     <img style="width:72px; height:35px;" src="/assets/develop.png">
-                </a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/ambrosia-gambrell" target="_blank"><ion-icon class="social-icon" name="logo-linkedin"></ion-icon></a>
+                    <a class="social-icon" href="https://github.com/ambrosiagambrell" target="_blank"><ion-icon class="social-icon" name="logo-github"></ion-icon></ion-icon></a>
+                </div>
                 <div class="container d-none d-lg-block">
-                    <div class="navbar">
+                    <div class="navbar"> 
                         <ul class="navbar-nav ms-auto my-lg-0">
                             <li class="nav-item ">
-                                <a class ="nav-link me-lg-3" href="#home">Home</a>
+                                <a class ="nav-link me-lg-2" href="#home">Home</a>
                             </li> 
                             <li class="nav-item">
-                                <a class ="nav-link me-lg-3" href="#about">About</a>
+                                <a class ="nav-link me-lg-2" href="#about">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class ="nav-link me-lg-3" href="#workHistory">Work History</a>
+                                <a class ="nav-link me-lg-2" href="#workHistory">Work History</a>
                             </li>
                             <li class="nav-item">
-                                <a class ="nav-link me-lg-3" href="#education">Education</a>
+                                <a class ="nav-link me-lg-2" href="#education">Education</a>
                             </li>
                             <li class="nav-item">
-                                <a class ="nav-link me-lg-3" href="#projects">Projects</a>
+                                <a class ="nav-link me-lg-2" href="#projects">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class ="nav-link me-lg-3" href="#testimonials">Testimonials</a>
+                                <a class ="nav-link me-lg-2" href="#testimonials">Testimonials</a>
                             </li>
                             <li class="nav-item">
-                                <a class ="nav-link me-lg-3" href="#contact">Contact</a>
+                                <a class ="nav-link me-lg-2" href="#contact">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -645,5 +647,10 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
