--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <div class="d-flex align-items-center justify-content-center testimonial">
-                                            <img class="rounded-circle me-3" src="assets/user1.png" alt="User 1">
+                                            <img class="img-thumbnail rounded-circle me-3" src="https://randomuser.me/api/portraits/women/2.jpg" alt="User 1">
                                         </div>
                                         <div class="text-center fs-5 fst-italic mb-4 px-2">
                                             "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolor voluptatum nostrum eius vitae nam excepturi corporis sequi nisi harum!"
@@ -549,7 +549,7 @@
                                     </div>
                                     <div class="carousel-item">
                                         <div class="d-flex align-items-center justify-content-center testimonial">
-                                            <img class="rounded-circle me-3" src="assets/user2.png" alt="User 2">
+                                            <img class="img-thumbnail rounded-circle me-3" src="https://randomuser.me/api/portraits/men/4.jpg" alt="User 2">
                                         </div>
                                         <div class="text-center fs-5 fst-italic mb-4 px-2">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla rerum fugiat corporis ullam eveniet asperiores, porro aliquid non enim unde ducimus alias architecto.
@@ -562,7 +562,7 @@
                                     </div>
                                     <div class="carousel-item">
                                         <div class="d-flex align-items-center justify-content-center testimonial">
-                                            <img class="rounded-circle me-3" src="assets/user3.png" alt="User 3">
+                                            <img class="img-thumbnail rounded-circle me-3" src="https://randomuser.me/api/portraits/women/3.jpg" alt="User 3">
                                         </div>
                                         <div class="text-center fs-5 fst-italic mb-4 px-2">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto repellendus quaerat neque consequatur laborum totam vitae pariatur sint. Ipsa, omnis aspernatur.
