--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
-<body>
+<body data-bs-theme="dark">
     <div class="container-fluid px-0" id="home">
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark shadow fixed-top">
+        <nav class="navbar navbar-expand-lg shadow fixed-top">
             <div class="container-lg">
                 <div class="navbar-brand d-flex">
                     <img style="width:72px; height:35px;" src="/assets/develop.png">
@@ -57,6 +57,9 @@
                                 <a class ="nav-link me-lg-2" href="#contact">Contact</a>
                             </li>
                         </ul>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked onclick="myFunction()">
+                        </div>
                     </div>
                 </div>
                 <!--dropdown-->
@@ -72,14 +75,27 @@
                         <li><a class="dropdown-item" href="#projects">Projects</a></li>
                         <li><a class="dropdown-item" href="#testimonials">Testimonials</a></li>
                         <li><a class="dropdown-item" href="#contact">Contact</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li class="dropdown-item">
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked onclick="myFunction()">
+                            </div>
+                        </li>
                     </ul>
+                    <script>
+                        function myFunction() {
+                            var element = document.body;
+                            element.dataset.bsTheme = 
+                                element.dataset.bsTheme == "light" ? "dark" : "light";
+                        }
+                    </script>
                 </div>
             </div>
         </nav>
         <!-- Nav Bar End -->
 
         <!-- Hero -->
-        <header class="bg-light py-5">
+        <header class="bg-light py-5 shadow">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-5 col-xxl-6 col-lg-6 order-lg-2 justify-content-center text-center">
@@ -92,13 +108,9 @@
                             <p class="lead text-secondary text-center mb-4">I specialize in application and integration support and am passionate about getting web applications communicating with eachother seemlessly.
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-center">
-                                <a class="btn btn-primary btn-large text-uppercase fw-bold" href="#about">
-                                    See More
-                                    <span class="material-icons-outlined ms-2">visibility</span>
-                                </a>
-                                 <a class="btn btn-primary btn-large text-uppercase fw-bold" href="#projects">
-                                    View My Work
-                                    <span class="material-icons-outlined ms-2">manage_search</span>
+                                <a class="btn btn-primary btn-large text-uppercase fw-bold" onclick="window.open('./assets/GambrellAmbrosia_Resume.pdf')">
+                                    download resume
+                                    <span class="material-icons-outlined ms-2">download</span>
                                 </a>
                             </div>
                         </div>
@@ -600,29 +612,29 @@
                         <h2 class="fw-bold">Contact</h2>
                         <p class="lead text-muted mb-5">
                             Would you like to get in touch with me? I would love to hear from you!
-                         </p>
+                        </p>
                     </div>
                 </div>
                 <div class="container mb-5">
                     <form class="row g-3">
                         <div class="col-md-6">
-                            <label for="firstName" class="form-label text-light">First Name</label>
-                            <Input type="text" class="form-control" id="firstName" placeholder="First Name" required>
+                            <label for="firstName" class="form-label fw-bold">First Name</label>
+                            <Input type="text" class="form-control" id="firstName" placeholder="John" required>
                         </div>
                         <div class="col-md-6">
-                            <label for="lastName" class="form-label text-light">Last Name</label>
-                            <Input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
+                            <label for="lastName" class="form-label fw-bold">Last Name</label>
+                            <Input type="text" class="form-control" id="lastName" placeholder="Smith" required>
                         </div>
                         <div class="col-md-8">
-                            <label for="emailAddress" class="form-label text-light">E-mail Address</label>
-                            <Input type="email" class="form-control" id="emailAddress" placeholder="E-mail Address" required>
+                            <label for="emailAddress" class="form-label fw-bold">E-mail Address</label>
+                            <Input type="email" class="form-control" id="emailAddress" placeholder="john.smith@gmail.com" required>
                         </div>
                         <div class="col-md-4">
-                            <label for="phoneNumber" class="form-label text-light">Phone Number (Optional)</label>
+                            <label for="phoneNumber" class="form-label fw-bold">Phone Number (Optional)</label>
                             <Input type="text" class="form-control" id="phoneNumber" placeholder="+1 (999) 999-9999">
                         </div>
                         <div class="col-md-12">
-                            <label for="message" class="form-label text-light">Message</label>
+                            <label for="message" class="form-label fw-bold">Message</label>
                             <textarea class="form-control" id="message" placeholder="Comments, or questions?" required></textarea>
                         </div>
                         <div class="col-md-12">
@@ -648,6 +660,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Ionicons JS -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
