--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                                 <a class ="nav-link me-lg-2" href="#contact">Contact</a>
                             </li>
                         </ul>
-                        <div class="form-check form-switch">
+                        <div class="form-check form-switch pt-1">
                             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked onclick="myFunction()">
+                            <span class="material-icons-outlined text-info pb-1">nights_stay</span>
                         </div>
                     </div>
                 </div>
@@ -78,7 +79,7 @@
                         <li><hr class="dropdown-divider"></li>
                         <li class="dropdown-item">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked onclick="myFunction()">
+                                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked onclick="myFunction()"><span>Dark Mode</span>
                             </div>
                         </li>
                     </ul>
