--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
         <!-- Nav Bar End -->
 
         <!-- Hero -->
-        <header class="bg-light py-5 shadow">
+        <header class="bg-info-subtle py-5 shadow">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-5 col-xxl-6 col-lg-6 order-lg-2 justify-content-center text-center">
-                        <img class="img-fluid border border-primary border-5 rounded-circle my-5" src="/assets/ambrosia.jpg" alt="Picture of Ambrosia">
+                        <img class="img-fluid border border-info border-5 rounded-circle my-5" src="/assets/ambrosia.jpg" alt="Picture of Ambrosia">
                     </div>
                     <div class="col-lg-6 col-xl-7 col-xxl-6 col-lg-6 order-lg-1">
                         <div class="my-5">
-                            <h2 class="text-dark text-center fw-bold mb-2">Hi! I am Ambrosia,</h2>
+                            <h2 class="text-center fw-bold mb-2">Hi! I am Ambrosia,</h2>
                             <h2 class="text-primary text-center fw-bold mb-2">an aspiring web developer</h2>
                             <p class="lead text-secondary text-center mb-4">I specialize in application and integration support and am passionate about getting web applications communicating with eachother seemlessly.
                             </p>
@@ -120,7 +120,7 @@
             </div>
         </header>
         <!-- Hero End -->
-
+        <hr>
         <main> 
             <!-- About -->
             <section id="about" class="text-center py-5">
@@ -132,24 +132,24 @@
                          </p>
                     </div>
                 </div>
-                <div class="container mb-5">
-                    <div class="row">
-                        <div class="col-lg-4 mx-auto mb-5"><!--D-->
-                            <div class="d-flex mb-5 about">
+                <div class="container">
+                    <div class="row justify-content-evenly">
+                        <div class="col-lg-3 bg-secondary-subtle shadow p-5"><!--D-->
+                            <div class="mb-5 about">
                                 <span class="material-icons-outlined m-auto text-primary">palette</span>
                             </div>
                                 <h5>Design</h5>
                                 <p class="text-muted mb-0">I aim to create beautiful and modern designs.</p>
                         </div>
-                        <div class="col-lg-4 mx-auto mb-5"><!--F-->
-                            <div class="d-flex mb-5 about">
+                        <div class="col-lg-3 bg-light-subtle shadow p-5"><!--F-->
+                            <div class="mb-5 about">
                                 <span class="material-icons-outlined m-auto text-primary">code</span>
                             </div>
                                 <h5>Development</h5>
                                 <p class="text-muted mb-0">I am looking to develop responsive, scalable, and fast applications using the best standards and coding practices.</p>
                         </div>
-                        <div class="col-lg-4 mx-auto mb-5"><!--Y-->
-                            <div class="d-flex mb-5 about">
+                        <div class="col-lg-3 bg-secondary-subtle shadow p-5"><!--Y-->
+                            <div class="mb-5 about">
                                 <span class="material-icons-outlined m-auto text-primary">settings</span>
                             </div>
                                 <h5>Launch & Maintance</h5>
@@ -161,7 +161,7 @@
             <!-- About End -->
             <hr>
             <!-- Work History -->
-            <section id="workHistory" class="text-center py-5">
+            <section id="workHistory" class="text-center bg-info-subtle py-5">
                 <div class="container py-5">
                     <div class="row justify-content-center">
                         <h2 class="fw-bold">Work History</h2>
@@ -414,7 +414,7 @@
             <!-- Education End-->
             <hr>
             <!-- Projects -->
-            <section id="projects" class="text-center py-5">
+            <section id="projects" class="text-center bg-info-subtle py-5">
                 <div class="container py-5">
                     <div class="row justify-content-center">
                         <h2 class="fw-bold">Projects</h2>
@@ -426,7 +426,7 @@
                 <div class="container mb-5">
                     <div class="row">
                         <div class="col-lg-4 mx-auto mb-5">
-                            <div class="card h-100 shadow-lg border-0 bg-light">
+                            <div class="card h-100 shadow border-0 bg-light">
                                 <img class="card-img-top" src="assets/project1.png" alt="Project 1">
                                 <div class="card-body p-4">
                                     <h5 class="card-title mb-2 text-dark">Development Project 1</h5>
@@ -459,7 +459,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mx-auto mb-5">
-                            <div class="card h-100 shadow-lg border-0 bg-light">
+                            <div class="card h-100 shadow border-0 bg-light">
                                 <img class="card-img-top" src="assets/project2.png" alt="Project 2">
                                 <div class="card-body p-4">
                                     <h5 class="card-title mb-2 text-dark">Development Project 2</h5>
@@ -492,7 +492,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mx-auto mb-5">
-                            <div class="card h-100 shadow-lg border-0 bg-light">
+                            <div class="card h-100 shadow border-0 bg-light">
                                 <img class="card-img-top" src="assets/project3.png" alt="Project 3">
                                 <div class="card-body p-4">
                                     <h5 class="card-title mb-2 text-dark">Development Project 3</h5>
@@ -540,7 +540,7 @@
                 <div class="container mb-5">
                     <div class="row">
                         <div class="col-lg-12 mx-auto mb-5">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active bg-primary" aria-current="true" aria-label="Slide 1"></button>
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="bg-primary" aria-label="Slide 2"></button>
@@ -583,7 +583,7 @@
                                         <div class="fw-bold mb-5">
                                             Mary Richards
                                             <span class="text-primary mx-1">/</span>
-                                            CEO, Company 1
+                                            CEO, Company 3
                                         </div>
                                     </div>
                                 </div>
@@ -607,7 +607,7 @@
             <!-- Testimonials End -->
             <hr>
             <!--Contact -->
-            <section id="contact" class="py-5">
+            <section id="contact" class="bg-info-subtle py-5">
                 <div class="container py-5 text-center">
                     <div class="row justify-content-center">
                         <h2 class="fw-bold">Contact</h2>
